@@ -7,11 +7,14 @@ dom
 
 $cdata = new DOMText;
 
-try {
-    $cdata->before("string");
-} catch (DOMException $e) {
-    echo $e->getMessage();
-}
+$cdata->before("string");
+$cdata->after("string");
+$cdata->replaceWith("string");
+
+$dom = new DOMDocument();
+$dom->adoptNode($cdata);
+var_dump($dom->saveXML($cdata));
+
 ?>
 --EXPECT--
-Hierarchy Request Error
+string(0) ""
