@@ -7,6 +7,7 @@ PHP                                                                        NEWS
 
 - DOM:
   . adoptNode now respects the strict error checking property. (nielsdos)
+  . Align DOMChildNode parent checks with spec. (nielsdos)
 
 - Opcache:
   . Avoid resetting JIT counter handlers from multiple processes/threads.
